--- a/templates/base.html
+++ b/templates/base.html
@@ -1,134 +1,23 @@
+
+{% include "includes/header.html" %} 
 {% load static %}
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="cache-control" content="max-age=604800" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Dịch vụ tư vấn tâm lí</title>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css"/>
-
-<link href="{% static 'css/docs.css' %}" rel="stylesheet" type="text/css"/>
-<link href="{% static 'css/docs.min.css' %}" rel="stylesheet" type="text/css"/>
-
-<!-- custom style -->
-<link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
-<link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
-<!-- JS Bundle của Bootstrap (bao gồm cả Popper) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
-<script src="{% static 'js/script.js' %}" type="text/javascript"></script>
-
-
-
-<script type="text/javascript">
-/// some script
-
-// jquery ready start
-$(document).ready(function() {
-	// jQuery code
-
-}); 
-// jquery end
-</script>
-
-</head>
 
 <body>
     
 
-<header class="section-header">
 
-
-    <section class="header-main border-bottom">
-        <div class="container">
-    <div class="row align-items-center">
-        <div class="col-lg-2 col-md-5 col-6">
-            <a href="{% url 'home'%}" class="brand-wrap">
-                <img src="{% static 'images/banners/logo.png' %}" alt="Logo" width="70" height="70">
-            </a> <!-- brand-wrap.// -->
-        </div>
-        <nav class="navbar-expand-lg ">
-            <div id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                   
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'blog' %}">Bài viết</a>
-                    </li>
-                    
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dịch vụ tâm lí
-                        </a>
-                        <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Tư vấn trực tiếp</a></li>
-                        <li><a class="dropdown-item" href="#">Tư vấn trực tuyến</a></li>
-                        
-                        </ul>
-                    </li>
-                </ul>
-                
-            </div>
-        </nav>	
-        
-        <div class="col-lg  col-md-3 col-sm-6 ">
-            <form action="{% url 'search' %}" class="search">
-                <div class="input-group w-70">
-                    <input type="text" class="form-control" style="width:20%;" placeholder="Search" name="keyword">
-                    
-                    <div class="input-group-append">
-                      <button class="btn btn-primary" type="submit">
-                        <i class="fa fa-search"></i>
-                      </button>
-                    </div>
-                </div>
-            </form> <!-- search-wrap .end// -->
-        </div> <!-- col.// -->
-        <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
-                    <div class="d-flex justify-content-end mb-3 mb-lg-0">
-                        {% if user.id is None %}
-                        <div class="widget-header">
-                            <small class="title text-muted">Welcome guest!</small>
-                            <div> 
-                                <a href="{% url 'login' %}">Sign in</a> <span class="dark-transp"> | </span>
-                                <a href="{% url 'register' %}"> Register</a>
-                                
-                            </div>
-                            <a class="get-start-btn" href="{% url 'registerDoctor' %}">
-									Register Doctor </a>
-                        </div>
-                        {% else %}
-                        <div class="widget-header">
-                            <small class="title text-muted">Welcome {{user.first_name}}!</small>
-                            <div>
-                            <a href="">Dashboard</a> <span class="dark-transp"> | </span>
-                            <a href="{% url 'logout' %}"> Logout</a>
-                            </div>
-                        </div>
-                    {% endif %}
-                        <a href="" class="widget-header pl-3 ml-3">
-                            <div class="icon icon-sm rounded-circle border"><i class="fas fa-comment"></i></div>
-                        </a>
-                    </div> <!-- widgets-wrap.// -->
-                </div> <!-- col.// -->
-    </div> <!-- row.// -->
-        </div> <!-- container.// -->
-    </section> <!-- header-main .// -->
     
     
     
-    
-    </header> <!-- section-header.// -->
-    
+    {% block content %}{% endblock content %}
     {% block main-content %}{% endblock main-content %}
     {% block blog %}{% endblock blog %}
     {% block about %}{% endblock about %}
     {% block register %}{% endblock register %}
+    {% block chat %}{% endblock chat %}
+    {%block javascript %}{%endblock javascript %}
 </body>
 </html>
