--- a/templates/blogs/blog.html
+++ b/templates/blogs/blog.html
@@ -15,22 +15,20 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y">
 <div class="container">
-
-
 <div class="row">
 	{% for blog in blogs %}
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="{{blog.image.url}}" alt="Blog Image"> </a>
+			<a href="" class="img-wrap"> <img src="{{blog.image.url}}" alt="Blog Image"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">{{blog.blog_name}}</a>
+				<a href="" class="title">{{blog.blog_name}}</a>
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	{% endfor %}
 </div> <!-- row.// -->
 
-
+{% comment %} 
 <nav class="mt-4" aria-label="Page navigation sample">
   <ul class="pagination">
     <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
@@ -39,7 +37,7 @@
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item"><a class="page-link" href="#">Next</a></li>
   </ul>
-</nav>
+</nav> {% endcomment %}
 
 	</main> <!-- col.// -->
 
