--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -1,44 +1,29 @@
-
+{% extends 'base.html'%}
 {% load static %}
 
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="cache-control" content="max-age=604800" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-{% include "includes/js.html" %}
-</head>
-<body>
-    
-    
-{% include "includes/header.html" %} 
+
 {% block chat %}
 <wrapper class="block max-w-2xl mx-auto my-10 px-6">
-    <div id="chat_window" class="h-[32rem] flex flex-col bg-gray-800 rounded-2xl shadow-2xl relative p-1">
+    <div id="chat_window" class="h-[36rem] flex flex-col bg-gray-800 rounded-2xl shadow-2xl relative p-1">
         <div class="flex justify-center text-emerald-400 bg-gray-800 p-2 sticky top-0 z-10">
             <span id="online-count" class="pr-1">3</span>online
         </div>
         <div id='chat_container' class="overflow-y-auto grow">
             <ul id='chat_messages' class="flex flex-col justify-end gap-2 p-4">
-                {% for message in chat_messages reversed %}
-                {% include "chat/chat_message.html" %}
-
-                {% endfor %}
+                {% for message in chat_messages reversed%}
+                {%include 'chat/chat_message.html'%}
+                {%endfor%}
             </ul>
         </div>
-        <div class="sticky bottom-0 bg-gray-800">
-            <div class=" items-center ">
+        <div class="sticky bottom-0 z-10 p-2 bg-gray-800">
+            <div class="flex items-center rounded-xl px-2 py-2">
                 <form id="chat_message_form" method='POST' class="w-full"
-       
                     hx-ext="ws"
                     ws-connect="/ws/chatroom/stress"
                     ws-send
                     _="on htmx:wsAfterSend reset() me">
-
-                    {% csrf_token %}
-                   {{form}}
+                    {%csrf_token%}
+                    {{form}}
                 </form>
             </div>
         </div>
@@ -55,7 +40,5 @@
     }
     scrollToBottom()
 </script>
-{%endblock%}    
 
-
-</body>
+{%endblock javascript %}
