--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -9,7 +9,7 @@
 
     <!-- custom style -->
     <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/> 
-
+    {% comment %} <link href="{% static 'css/chat.css' %}" rel="stylesheet" type="text/css"/>  {% endcomment %}
 
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" /> 
  
@@ -23,6 +23,7 @@
     <script src="https://unpkg.com/hyperscript.org@0.9.13"></script>
 
     <script src="https://cdn.tailwindcss.com"></script> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMm3Ny3D4M62Jk3j7Muql21nT4e4PTh1ke8B6B4" crossorigin="anonymous">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -118,52 +119,6 @@
         
     </style>
 </head>
-{% load static %}
-<header class="flex items-center justify-between bg-black h-20 px-8 text-white sticky top-0 z-40">
-    <div>
-        <a href="{% url 'home'%}" class="brand-wrap">
-            <img src="{% static 'images/banners/logo.png' %}" alt="Logo" width="70" height="70">
-        </a> <!-- brand-wrap.// -->
-    </div>
-    <nav class="block relative">
-        <ul class="navitems flex items-center justify-center h-full">
-            {% if request.user.is_authenticated %}
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog' %}">Bài viết</a>
-            </li>
-            <li><a class="dropdown-item" href="#">Tư vấn trực tiếp</a></li>
-            <li><a class="dropdown-item" href="{% url 'chat' %}"><i class="fas fa-envelope"></i>Tư vấn trực tuyến</a></li>          
-           
-            <li x-data="{ dropdownOpen: false }" class="relative">
-                <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false" class="cursor-pointer select-none">
-                    <img class="h-8 w-8 rounded-full object-cover" src="{{ request.user.profile.avatar }}" alt="Avatar" />
-                    {{ request.user.profile.name }}
-                    <img x-bind:class="dropdownOpen && 'rotate-180 duration-300'" class="w-4" src="https://img.icons8.com/small/32/ffffff/expand-arrow.png" alt="Dropdown" />
-                </a>
-                 <div x-show="dropdownOpen" x-cloak class="absolute right-0 bg-white text-black shadow rounded-lg w-40 p-2 z-20"
-                x-transition:enter="duration-300 ease-out"
-                x-transition:enter-start="opacity-0 -translate-y-5 scale-90"
-                x-transition:enter-end="opacity-100 translate-y-0 scale-100"
-                >
-                    <ul class="hoverlist [&>li>a]:justify-end">
-                        {% comment %} <li><a href="{% url 'profile' %}">My Profile</a></li> {% endcomment %}
-                        <li><a href="{% url 'edit' %}">Edit Profile</a></li>
-                     
-                        <li><a href="{% url 'logout' %}">Log Out</a></li>
-                    </ul>
-                </div>
-            
-            {% else %}
-            <li><a href="{% url 'login' %}">Login</a></li>
-            <li><a href="{% url 'register' %}">Signup</a></li>
-            <li><a href="{% url 'registerDoctor' %}">  Register Doctor </a></li>
-              
-            {% endif %}
 
-        </ul>
-       
-    </nav>
-</header>
 
 
